Fix issue with cursor jumping on spaces.

--- a/app/components/Tile/Tile.scss
+++ b/app/components/Tile/Tile.scss
@@ -16,6 +16,8 @@
       margin-left: 25px;
       text-shadow: 0 0.025em 0 rgba(0, 0, 0, 0.25);
       word-wrap: break-word;
+      white-space: nowrap;
+
       .cursor {
         margin-left: 2px;
         border-left: 1px solid #fff;
